--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+NODE_ENV="development"
 DB_URL="postgres://postgres:mysecretpassword@localhost:5432/postgres"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_12345"
